fix: modify error mess and en mess

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,10 @@
 # Security and other error
+error.9999=Uncategorized error!
+error.1100=Invalid message key.
+error.1101=Unauthenticated!
 error.1102=You don't have permission.
+error.1103=Invalid JWT signature.
 error.1104=JWT token is already expired.
+error.1105=Refresh token is already expired. Please login again.
+
+# Throw Exception
