fix: modify error mess and en mess

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -8,3 +8,31 @@ error.1104=JWT token is already expired.
 error.1105=Refresh token is already expired. Please login again.
 
 # Throw Exception
+error.1200=Username is already existed.
+error.1201=Email is already existed.
+error.1202=Phone number is already existed.
+error.1203=Role not found.
+error.1204=Username not found.
+error.1205=OTP not found.
+error.1206=This account has already been verified. Please, login.
+error.1207=Your OTP has already expired.
+error.1208=Email not found.
+error.1209=Status not found.
+error.1210=Your account has not been verified. Please check your email.
+error.1211=
+error.1212=
+error.1213=
+error.1214=
+error.1215=
+error.1216=
+error.1217=
+error.1218=
+error.1219=
+error.1220=
+error.1221=
+error.1222=
+error.1223=
+error.1224=
+error.1225=
+error.1226=
+
