fix: modify en mess

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -19,16 +19,16 @@ error.1207=Your OTP has already expired.
 error.1208=Email not found.
 error.1209=Status not found.
 error.1210=Your account has not been verified. Please check your email.
-error.1211=
-error.1212=
-error.1213=
-error.1214=
-error.1215=
-error.1216=
-error.1217=
-error.1218=
-error.1219=
-error.1220=
+error.1211=Login failed. Invalid username or password.
+error.1212=Passwords do not match.
+error.1213=User not found.
+error.1214=Name not found.
+error.1215=Code not found.
+error.1216=JSON parse error.
+error.1217=Data not found.
+error.1218=Type not found.
+error.1219=Authorization header is missing or invalid.
+error.1220=Token not found.
 error.1221=
 error.1222=
 error.1223=
