fix: modify error mess, en mess and data in data.sql

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -29,10 +29,31 @@ error.1217=Data not found.
 error.1218=Type not found.
 error.1219=Authorization header is missing or invalid.
 error.1220=Token not found.
-error.1221=
-error.1222=
-error.1223=
-error.1224=
-error.1225=
-error.1226=
+error.1221=Rate not found.
+error.1222=Schedule not found.
+error.1223=Room not found.
+error.1224=Seat not found.
+error.1225=The room already has a scheduled showtime at this time.
+error.1227=Promotion not found.
+error.1228=
+error.1229=
+error.1230=
+error.1231=
+error.1232=
+error.1233=
+error.1234=
+error.1235=
+error.1236=
+error.1237=
+error.1238=
+error.1239=
+error.1240=
+error.1241=
+error.1242=
+error.1243=
+error.1244=
+error.1245=
+error.1246=
+
+
 
