fix: modify error mess and en mess

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -34,26 +34,29 @@ error.1222=Schedule not found.
 error.1223=Room not found.
 error.1224=Seat not found.
 error.1225=The room already has a scheduled showtime at this time.
-error.1227=Promotion not found.
-error.1228=
-error.1229=
-error.1230=
-error.1231=
-error.1232=
-error.1233=
-error.1234=
-error.1235=
-error.1236=
-error.1237=
-error.1238=
-error.1239=
-error.1240=
-error.1241=
-error.1242=
-error.1243=
-error.1244=
-error.1245=
-error.1246=
+error.1226=Promotion not found.
+error.1227=Unexpected null value encountered.
+error.1228=Title not found.
+error.1229=General setting not found.
+error.1230=Cannot schedule during break time (e.g., 12:00 to 13:00).
+error.1231=Bill not found.
+error.1232=This customer bill is already existed.
+error.1233=Bill food not found.
+error.1234=Id not found.
+error.1235=Start time not found or already expired.
+error.1236=Schedule does not belong to the selected room.
+error.1237=Seat does not belong to the selected room.
+error.1238=Selected seat is already occupied.
+error.1239=No seats available in this room.
+error.1240=Cannot book ticket. The schedule has already ended.
+error.1241=Promotion is already existed.
+error.1242=Seats have already been created for this room.
+error.1243=Start date must not be later than end date.
+error.1244=Invalid date format. The correct format is yyyy-MM-dd.
+
+
+# Validation
+error.1300=
 
 
 
