fix: modify error mess and en mess

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -56,7 +56,10 @@ error.1244=Invalid date format. The correct format is yyyy-MM-dd.
 
 
 # Validation
-error.1300=
+error.1300=This field cannot be blank.
+error.1301=This field cannot be null.
+error.1302=This field cannot be empty.
+
 
 
 
