feat: add new en mess

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -59,7 +59,31 @@ error.1244=Invalid date format. The correct format is yyyy-MM-dd.
 error.1300=This field cannot be blank.
 error.1301=This field cannot be null.
 error.1302=This field cannot be empty.
+error.1303=Username must be at least 3 characters.
+error.1304=Email must be at least 6 characters.
+error.1305=Password must be at least 6 characters.
+error.1306=Invalid username format.
+error.1307=Invalid email format.
+error.1308=Invalid phone number format.
+error.1309=Invalid password format.
+error.1310=Invalid role code.
+error.1311=Invalid user status.
+error.1312=Address must be at least 4 characters.
+error.1313=Description must be at least 6 characters.
+error.1314=Name must be at least 3 characters.
+error.1315=Invalid code.
+error.1316=The capacity must be between 50 and 400 seats.
+error.1317=Line must be a letter from A to Z.
+error.1318=Seat number must be between 1 and 20.
+error.1319=Invalid image path. Please provide a valid local image file (jpg, jpeg, png, gif, bmp).
+error.1320=Price must be greater than 1000 VND.
+error.1321=Director name must be at least 3 characters.
+error.1322=Language must be at least 3 characters.
+error.1323=The trailer link is invalid.
+error.1324=The time is either before opening or after closing hours.
+error.1325=Invalid seat.
+error.1326=Start time must be today or later.
 
-
+# Payment
 
 
