fix: modify error code, add new mess to vi and en

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -85,5 +85,6 @@ error.1325=Invalid seat.
 error.1326=Start time must be today or later.
 
 # Payment
-
+error.70010=Payment has already been completed successfully.
+error.70020=Payment failed or was cancelled by user.
 
