--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -1,3 +1,89 @@
 # Security and other error
+error.9999=Lỗi chưa đư phân loại!
+error.1100=Message key không hợp lệ.
+error.1101=Chưa xác thực!
 error.1102=Bạn không có quyền truy cập.
+error.1103=Chữ ký JWT không hợp lệ.
 error.1104=Mã JWT đã hết hạn.
+error.1105=Refresh token đã hết hạn. Vui lòng đăng nhập lại.
+
+# Throw Exception
+error.1200=
+error.1201=
+error.1202=
+error.1203=
+error.1204=
+error.1205=
+error.1206=
+error.1207=
+error.1208=
+error.1209=
+error.1210=
+error.1211=
+error.1212=
+error.1213=
+error.1214=
+error.1215=
+error.1216=
+error.1217=
+error.1218=
+error.1219=
+error.1220=
+error.1221=
+error.1222=
+error.1223=
+error.1224=
+error.1225=
+error.1226=
+error.1227=
+error.1228=
+error.1229=
+error.1230=
+error.1231=
+error.1232=
+error.1233=
+error.1234=
+error.1235=
+error.1236=
+error.1237=
+error.1238=
+error.1239=
+error.1240=
+error.1241=
+error.1242=
+error.1243=
+error.1244=
+
+
+# Validation
+error.1300=Trường này bắt buộc phải được nhập.
+error.1301=Trường này không thể rỗng.
+error.1302=Trường này không được để rỗng (nội dung không hợp lệ).
+error.1303=
+error.1304=
+error.1305=
+error.1306=
+error.1307=
+error.1308=
+error.1309=
+error.1310=
+error.1311=
+error.1312=
+error.1313=
+error.1314=
+error.1315=
+error.1316=
+error.1317=
+error.1318=
+error.1319=
+error.1320=
+error.1321=
+error.1322=
+error.1323=
+error.1324=
+error.1325=
+error.1326=
+
+# Payment
+error.70010=Thanh toán đã được hoàn tất thành công.
+error.70020=Thanh toán không thành công hoặc đã bị người dùng hủy.
