fix: modify vi mess

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -8,51 +8,51 @@ error.1104=Mã JWT đã hết hạn.
 error.1105=Refresh token đã hết hạn. Vui lòng đăng nhập lại.
 
 # Throw Exception
-error.1200=
-error.1201=
-error.1202=
-error.1203=
-error.1204=
-error.1205=
-error.1206=
-error.1207=
-error.1208=
-error.1209=
-error.1210=
-error.1211=
-error.1212=
-error.1213=
-error.1214=
-error.1215=
-error.1216=
-error.1217=
-error.1218=
-error.1219=
-error.1220=
-error.1221=
-error.1222=
-error.1223=
-error.1224=
-error.1225=
-error.1226=
-error.1227=
-error.1228=
-error.1229=
-error.1230=
-error.1231=
-error.1232=
-error.1233=
-error.1234=
-error.1235=
-error.1236=
-error.1237=
-error.1238=
-error.1239=
-error.1240=
-error.1241=
-error.1242=
-error.1243=
-error.1244=
+error.1200=Tên người dùng đã tồn tại.
+error.1201=Email đã tồn tại.
+error.1202=Số điện thoại đã tồn tại.
+error.1203=Không tìm thấy vai trò.
+error.1204=Không tìm thấy tên người dùng.
+error.1205=Không tìm thấy mã OTP.
+error.1206=Tài khoản này đã được xác minh. Vui lòng, đăng nhập.
+error.1207=Mã OTP của bạn đã hết hạn.
+error.1208=Không tìm thấy email.
+error.1209=Không tìm thấy trạng thái.
+error.1210=Tài khoản của bạn chưa được xác minh. Vui lòng kiểm tra email.
+error.1211=Đăng nhập không thành công. Tên người dùng hoặc mật khẩu không hợp lệ.
+error.1212=Mật khẩu không khớp.
+error.1213=Không tìm thấy người dùng.
+error.1214=Không tìm thấy tên.
+error.1215=Không tìm thấy mã.
+error.1216=Lỗi phân tích cú pháp JSON.
+error.1217=Không tìm thấy dữ liệu.
+error.1218=Không tìm thấy loại.
+error.1219=Header ủy quyền bị thiếu hoặc không hợp lệ.
+error.1220=Không tìm thấy token.
+error.1221=Không tìm thấy nhãn.
+error.1222=Không tìm thấy lịch chiếu.
+error.1223=Không tìm thấy phòng.
+error.1224=Không tìm thấy ghế.
+error.1225=Phòng đã có lịch chiếu vào thời điểm này.
+error.1226=Không tìm thấy mã giảm giá.
+error.1227=Gặp phải giá trị null không mong muốn.
+error.1228=Không tìm thấy tiêu đề.
+error.1229=Không tìm thấy cài đặt chung.
+error.1230=Không thể lên lịch chiếu trong thời gian nghỉ (12:00 đến 13:00).
+error.1231=Không tìm thấy hóa đơn.
+error.1232=Hóa đơn của khách hàng này đã tồn tại.
+error.1233=Không tìm thấy hóa đơn đồ ăn.
+error.1234=Không tìm thấy id.
+error.1235=Không tìm thấy thời gian bắt đầu hoặc đã hết hạn.
+error.1236=Suất chiếu này không thuộc phòng chiếu bạn đã chọn.
+error.1237=Ghế này không thuộc phòng chiếu bạn đã chọn.
+error.1238=Ghế bạn chọn đã được đặt trước.
+error.1239=Không còn ghế trống trong phòng này.
+error.1240=Không thể đặt vé. Suất chiếu này đã kết thúc.
+error.1241=Mã giảm giá đã hết hạn.
+error.1242=Ghế ngồi đã được tạo cho phòng chiếu này rồi.
+error.1243=Ngày bắt đầu không được sau ngày kết thúc.
+error.1244=Định dạng ngày không hợp lệ. Định dạng đúng là yyyy-MM-dd.
 
 
 # Validation
@@ -85,5 +85,5 @@ error.1325=
 error.1326=
 
 # Payment
-error.70010=Thanh toán đã được hoàn tất thành công.
+error.70010=Thanh toán đã được thực hiện thành công trước đó.
 error.70020=Thanh toán không thành công hoặc đã bị người dùng hủy.
