feat: add vi message

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -59,20 +59,20 @@ error.1244=Định dạng ngày không hợp lệ. Định dạng đúng là yyy
 error.1300=Trường này bắt buộc phải được nhập.
 error.1301=Trường này không thể rỗng.
 error.1302=Trường này không được để rỗng (nội dung không hợp lệ).
-error.1303=
-error.1304=
-error.1305=
-error.1306=
-error.1307=
-error.1308=
-error.1309=
-error.1310=
-error.1311=
-error.1312=
-error.1313=
-error.1314=
-error.1315=
-error.1316=
+error.1303=Tên người dùng phải có ít nhất 3 ký tự.
+error.1304=Email phải có ít nhất 6 ký tự.
+error.1305=Mật khẩu phải có ít nhất 6 ký tự.
+error.1306=Định dạng tên người dùng không hợp lệ.
+error.1307=Định dạng email không hợp lệ.
+error.1308=Định dạng số điện thoại không hợp lệ.
+error.1309=Định dạng mật khẩu không hợp lệ.
+error.1310=Mã vai trò không hợp lệ.
+error.1311=Trạng thái người dùng không hợp lệ.
+error.1312=Địa chỉ phải có ít nhất 4 ký tự.
+error.1313=Mô tả phải có ít nhất 6 ký tự.
+error.1314=Tên phải có ít nhất 3 ký tự.
+error.1315=Mã không hợp lệ.
+error.1316=Sức chứa phải từ 50 đến 400 chỗ ngồi.
 error.1317=
 error.1318=
 error.1319=
