feat: add vi message

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -73,16 +73,16 @@ error.1313=Mô tả phải có ít nhất 6 ký tự.
 error.1314=Tên phải có ít nhất 3 ký tự.
 error.1315=Mã không hợp lệ.
 error.1316=Sức chứa phải từ 50 đến 400 chỗ ngồi.
-error.1317=
-error.1318=
-error.1319=
-error.1320=
-error.1321=
-error.1322=
-error.1323=
-error.1324=
-error.1325=
-error.1326=
+error.1317=Hàng ghế phải là một chữ cái từ A đến Z.
+error.1318=Số ghế phải nằm trong khoảng từ 1 đến 20.
+error.1319=Đường dẫn ảnh không hợp lệ. Vui lòng chọn một tệp ảnh hợp lệ từ thiết bị (định dạng: jpg, jpeg, png, gif, bmp).
+error.1320=Giá phải lớn hơn 1000 VND.
+error.1321=Tên đạo diễn phải có ít nhất 3 ký tự.
+error.1322=Ngôn ngữ phải có ít nhất 3 ký tự.
+error.1323=Liên kết trailer không hợp lệ.
+error.1324=Vui lòng chọn thời gian nằm trong khung giờ hoạt động của rạp.
+error.1325=Ghế không hợp lệ.
+error.1326=Vui lòng chọn thời gian bắt đầu từ hôm nay trở đi.
 
 # Payment
 error.70010=Thanh toán đã được thực hiện thành công trước đó.
