fix: modify vi message

--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -1,5 +1,5 @@
 # Security and other error
-error.9999=Lỗi chưa đư phân loại!
+error.9999=Lỗi chưa được phân loại!
 error.1100=Message key không hợp lệ.
 error.1101=Chưa xác thực!
 error.1102=Bạn không có quyền truy cập.
